--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,23 +73,31 @@
       </div>
     </div>
     <div class="wrap-outer-content layout-band">
-      <div class="wrap-content layout-3q1q">
-        <main id="content-main" class="content-main" role="main">
+      <div class="wrap-content gridband layout-3q1q">
+        <main id="content-main" class="col3q" role="main">
 
-        <%= bootstrap_flash %>
+        <% if flash %>
+          <% flash.each do |msg_type, message| %>
+            <% next if msg_type == 'global' %>
+            <div class="alert alert-banner <%= msg_type %>" role="alert">
+              <%= sanitize(message) %>
+            </div>
+          <% end %>
+        <% end %>
+
         <%= yield %>
 
         </main>
         <!-- close content-main -->
 
-        <aside class="content-sup">
+        <aside class="content-sup col1q-r">
           <% unless user_signed_in? %>
           <div class="bit">
             <h3 class="title">MIT OpenID Sign-in</h3>
-            <p>This application uses the MIT OpenId Connect pilot for sign-in (instead of Touchstone) &mdash; it will ask for approval to sign in with your MIT information and credentials. 
+            <p>This application uses the MIT OpenId Connect pilot for sign-in (instead of Touchstone) &mdash; it will ask for approval to sign in with your MIT information and credentials.
             <a target="_blank" href="https://oidc.mit.edu/">Learn more</a>
             </p>
-          </div>        
+          </div>
           <% end %>
           <div class="bit">
             <h3 class="title">Related</h3>
