remove required mark, add optional text

--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -13,11 +13,11 @@
                       wrapper_html: { class: 'field-wrap' },
                       input_html: { class: 'field field-text' } %>
 
-  <%= f.input :journal, label: 'Journal', placeholder: 'Optional',
+  <%= f.input :journal, label: 'Journal (optional)',
                         wrapper_html: { class: 'field-wrap' },
                         input_html: { class: 'field field-text' } %>
 
-  <%= f.input :doi, placeholder: 'Optional',
+  <%= f.input :doi, label: 'DOI (optional)',
                     wrapper_html: { class: 'field-wrap' },
                     input_html: { class: 'field field-text' } %>
 
