--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -32,13 +32,12 @@
 
   <%= f.input :funders, label: 'Funders', as: :check_boxes,
                         collection: @submission.valid_funders.compact, include_hidden: false,
-                        wrapper_html: { class: 'field-wrap' },
-                        label_html: { class: 'field-checkbox' },
-                        input_html: { class: 'checkbox' } %>
+                        wrapper_html: { class: 'field-wrap group-checkboxes' },
+                        input_html: { class: 'input-checkbox' } %>
 
   <%= f.input :documents, as: :file, multiple: true,
                                hint: 'Drag and Drop files or click "Choose Files"',
-                               wrapper_html: { class: 'field-wrap list-checkboxes' },
+                               wrapper_html: { class: 'field-wrap' },
                                input_html: { class: 'field field-upload',
                                              multiple: true } %>
 
