--- a/app/assets/stylesheets/libraries-global.scss
+++ b/app/assets/stylesheets/libraries-global.scss
@@ -238,7 +238,7 @@ hr {
   color: #999;
 }
 
-.copy-lead {
+.copy-lead, .panel .panel-heading {
   font-size: 2rem;
 }
 
@@ -639,6 +639,10 @@ hr {
   border: 0;
 }
 
+.button-small {
+  padding: 2px 10px;
+}
+
 form {
   margin: 1.5rem 0;
 }
@@ -839,6 +843,37 @@ form .error .hint {
   display: inline-block;
   min-width: 3rem;
   text-align: center;
+}
+
+.panel {
+  margin: 1.5rem 0;
+  border: 1px solid #ccc;
+  background-color: #fafafa;
+  border-top: 4px solid #338bc5;
+}
+.panel .panel-heading {
+  margin: 1.5rem 2rem .5rem 2rem;
+}
+.panel .panel-body {
+  margin: .5rem 2rem 1.5rem 2rem;
+}
+.panel .panel-footer {
+  font-size: 1.4rem;
+  border-top: 1px solid #ccc;
+  background-color: rgba(89, 89, 89, 0.1);
+  padding: 1rem 2rem;
+}
+.panel.panel-info {
+  border-top: 4px solid #338bc5;
+}
+.panel.panel-success {
+  border-top: 4px solid #43926a;
+}
+.panel.panel-warning {
+  border-top: 4px solid #faa933;
+}
+.panel.panel-danger {
+  border-top: 4px solid #AC1D22;
 }
 
 #skip {
