--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -41,7 +41,7 @@
                                input_html: { class: 'field field-upload',
                                              multiple: true } %>
 
-  <div class="form-group">
+  <div class="field-group">
     <div class="col-sm-10 col-sm-offset-2">
       <!-- The global progress bar -->
       <div id="progress" class="progress" style="display: none;">
@@ -62,7 +62,7 @@
       </div>
 
       <div id="resetUploads" style="display: none;">
-        <button type="button" id="uploadReset" class="btn button-warn">Remove Uploads</button>
+        <button type="button" id="uploadReset" class="btn button-secondary button-warn">Remove Uploads</button>
       </div>
     </div>
   </div>
