--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -62,7 +62,7 @@
       </div>
 
       <div id="resetUploads" style="display: none;">
-        <button type="button" id="uploadReset" class="btn button-secondary button-warn">Remove Uploads</button>
+        <button type="button" id="uploadReset" class="btn button-secondary warn">Remove Uploads</button>
       </div>
     </div>
   </div>
