--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,9 @@
 @import "_variables";
 @import "libraries-global";
 @import "_submissions";
+
+.button-secondary.current {
+  background-color: $brand-primary-accent;
+  border-color: #43926a;
+  color: #fafafa;
+}
