--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -21,23 +21,34 @@
                     wrapper_html: { class: 'field-wrap' },
                     input_html: { class: 'field field-text  wide' } %>
 
-  <%= f.input :publication_month, label: 'Publication Month', as: :select,
-                         collection: Date::MONTHNAMES.compact,
-                         hint: 'If not yet published, please enter an estimated Publication Date.',
-                         wrapper_html: { class: 'field-wrap' },
-                         input_html: { class: 'field field-select' } %>
+  <fieldset>
+    <legend>Publication Date</legend>
 
-  <%= f.input :publication_year, label: 'Publication Year', as: :string,
-                         hint: 'If not yet published, please enter an estimated Publication Date.',
-                         wrapper_html: { class: 'field-wrap' },
-                         input_html: { class: 'field field-select' } %>
+      <div class="group-inline">
 
-  <label id="funder_label">Funders
-  <%= f.input :funders, label: false, as: :check_boxes,
+      <%= f.input :publication_month, label: 'Month', as: :select,
+                           collection: Date::MONTHNAMES.compact,
+                           wrapper_html: { class: 'field-wrap' },
+                           input_html: { class: 'field field-select' } %>
+
+      <%= f.input :publication_year, label: 'Year', as: :string,
+                          wrapper_html: { class: 'field-wrap' },
+                          input_html: { class: 'field field-select' } %>
+
+      <p class="tip">If not yet published, please enter an estimated Publication Date.</p>
+    </div>
+
+  </fieldset>
+
+  <fieldset>
+    <legend>Funders</legend>
+
+
+    <%= f.input :funders, label: false, as: :check_boxes,
                         collection: @submission.valid_funders.compact, include_hidden: false,
                         wrapper_html: { class: 'field-wrap list-checkboxes' },
                         input_html: { class: 'input-checkbox', 'labelledby': "funder_label" } %>
-  </label>
+  </fieldset>
 
   <%= f.input :documents, as: :file, multiple: true,
                                hint: 'Drag and Drop files or click "Choose Files"',
